[profile.release]
panic = "unwind"

[workspace.package]
authors = ["Rafael Acuña, Terratek, Luchex, Robinhodl"]
edition = "2021"
homepage = "https://psylabs.io"
license = "Unlicense"
repository = ""

[workspace]
members = ["node", "runtime", "pallets/pallet-attestations"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5.3", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = [
    "derive",
] }
color-print = "0.3.4"
docify = "0.2.8"
futures = "0.3.30"
hex-literal = "0.4.1"
jsonrpsee = { version = "0.23.2", features = ["server"] }
log = { version = "0.4.21", default-features = false }
scale-info = { version = "2.11.1", default-features = false, features = [
    "derive",
] }
serde = "1.0.197"
serde_json = "1.0.114"
smallvec = "1.11.2"

# Build
substrate-build-script-utils = "11.0.0"
substrate-wasm-builder = "23.0.0"

# Local
polkattest-runtime = { path = "./runtime" }

# Substrate
frame-benchmarking = { version = "36.0.0", default-features = false }
frame-benchmarking-cli = "40.0.0"
frame-executive = { version = "36.0.0", default-features = false }
frame-support = { version = "36.0.0", default-features = false }
frame-system = { version = "36.1.0", default-features = false }
frame-system-benchmarking = { version = "36.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "33.0.0", default-features = false }
frame-try-runtime = { version = "0.42.0", default-features = false }
frame-metadata-hash-extension = { version = "0.4.0", default-features = false }
pallet-aura = { version = "35.0.0", default-features = false }
pallet-authorship = { version = "36.0.0", default-features = false }
pallet-balances = { version = "37.0.0", default-features = false }
pallet-message-queue = { version = "39.0.0", default-features = false }
pallet-session = { version = "36.0.0", default-features = false }
pallet-sudo = { version = "36.0.0", default-features = false }
pallet-timestamp = { version = "35.0.0", default-features = false }
pallet-transaction-payment = { version = "36.0.0", default-features = false }
pallet-transaction-payment-rpc = "38.0.0"
pallet-transaction-payment-rpc-runtime-api = { version = "36.0.0", default-features = false }
pallet-attestations = { path = "./pallets/pallet-attestations", default-features = false }
pallet-utility = { version = "36.0.0", default-features = false }
pallet-treasury = { version = "35.0.0", default-features = false }
prometheus-endpoint = { version = "0.17.0", default-features = false, package = "substrate-prometheus-endpoint" }
sc-basic-authorship = "0.42.0"
sc-chain-spec = "35.0.0"
sc-cli = "0.44.0"
sc-client-api = "35.1.0"
sc-offchain = "37.0.0"
sc-consensus = "0.41.0"
sc-executor = "0.39.0"
sc-network = "0.42.0"
sc-network-sync = "0.41.0"
sc-rpc = "37.0.0"
sc-service = "0.43.0"
sc-sysinfo = "35.0.0"
sc-telemetry = "22.0.0"
sc-tracing = "35.0.0"
sc-transaction-pool = "35.0.0"
sc-transaction-pool-api = "35.0.0"
sp-api = { version = "33.0.0", default-features = false }
sp-block-builder = { version = "33.0.0", default-features = false }
sp-blockchain = "35.1.0"
sp-consensus-aura = { version = "0.39.0", default-features = false }
sp-core = { version = "34.0.0", default-features = false }
sp-io = { version = "37.0.0", default-features = false }
sp-genesis-builder = { version = "0.14.0", default-features = false }
sp-inherents = { version = "33.0.0", default-features = false }
sp-keystore = "0.40.0"
sp-offchain = { version = "33.0.0", default-features = false }
sp-runtime = { version = "38.0.0", default-features = false }
sp-session = { version = "34.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-timestamp = "33.0.0"
sp-transaction-pool = { version = "33.0.0", default-features = false }
sp-version = { version = "36.0.0", default-features = false }
substrate-frame-rpc-system = "36.0.0"

# Contracts
pallet-contracts = { version = "35.0.0", default-features = false }

# Polkadot
pallet-xcm = { version = "15.0.0", default-features = false }
polkadot-cli = "15.0.0"
polkadot-parachain-primitives = { version = "13.0.0", default-features = false }
polkadot-primitives = "14.0.0"
polkadot-runtime-common = { version = "15.0.0", default-features = false }
xcm = { version = "=14.0.3", package = "staging-xcm", default-features = false }
xcm-builder = { version = "15.0.0", package = "staging-xcm-builder", default-features = false }
xcm-executor = { version = "15.0.0", package = "staging-xcm-executor", default-features = false }

# Cumulus
cumulus-client-cli = "0.15.0"
cumulus-client-collator = "0.15.0"
cumulus-client-consensus-aura = "0.15.0"
cumulus-client-consensus-common = "0.15.0"
cumulus-client-consensus-proposer = "0.14.0"
cumulus-client-service = "0.15.0"
cumulus-pallet-aura-ext = { version = "0.15.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.15.0", default-features = false }
cumulus-pallet-session-benchmarking = { version = "17.0.0", default-features = false }
cumulus-pallet-xcm = { version = "0.15.0", default-features = false }
cumulus-pallet-xcmp-queue = { version = "0.15.0", default-features = false }
cumulus-primitives-aura = { version = "0.14.0", default-features = false }
cumulus-primitives-core = { version = "0.14.0", default-features = false }
cumulus-primitives-parachain-inherent = "0.14.0"
cumulus-primitives-storage-weight-reclaim = { version = "6.0.2", default-features = false }
cumulus-primitives-utility = { version = "0.15.0", default-features = false }
cumulus-relay-chain-interface = "0.15.0"
pallet-collator-selection = { version = "17.0.0", default-features = false }
parachains-common = { version = "15.0.0", default-features = false }
parachain-info = { version = "0.15.0", package = "staging-parachain-info", default-features = false }
