[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT-0"
authors = ["yjh465402634@gmail.com"]
homepage = "https://github.com/substk"
repository = "https://github.com/substk"

[workspace]
resolver = "2"
members = [
    "crates/clients/kv-store",
    "crates/clients/kv-store-service",

    "template/node",
    "template/pallets/template",
    "template/runtime",
]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1.83"
clap = { version = "4.5.3", features = ["derive", "deprecated"] }
codec = { version = "3.6.12", default-features = false, package = "parity-scale-codec" }
env_logger = { version = "0.11.3" }
forwarded-header-value = { version = "0.1.1" }
futures = { version = "0.3.28" }
http = { version = "1.1" }
http-body-util = { version = "0.1.2", default-features = false }
jsonrpsee = { version = "0.23" }
log = { version = "0.4" }
parity-db = { version = "0.4.12" }
parking_lot = { version = "0.12" }
scale-info = { version = "2.11.1", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
tempfile = { version = "3.8.1" }
thiserror = "1.0"
tokio = { version = "1.37.0", default-features = false }
tower = { version = "0.4.13" }
tower-http = { version = "0.5.2" }

# local
pallet-template = { path = "template/pallets/template", default-features = false }
solochain-template-runtime = { path = "template/runtime", default-features = false }
substk-client-kv-store = { path = "crates/clients/kv-store" }
substk-client-kv-store-service = { path = "crates/clients/kv-store-service" }
# sdk
sc-basic-authorship = { version = "0.44.0", default-features = false }
sc-cli = { version = "0.46.0", default-features = false }
sc-client-api = { version = "37.0.0", default-features = false }
sc-consensus = { version = "0.43.0", default-features = false }
sc-consensus-aura = { version = "0.44.0", default-features = false }
sc-consensus-grandpa = { version = "0.29.1", default-features = false }
sc-executor = { version = "0.40.0", default-features = false }
sc-keystore = { version = "33.0.0", default-features = false }
sc-network = { version = "0.44.0", default-features = false }
sc-offchain = { version = "39.0.0", default-features = false }
sc-rpc = { version = "39.0.0", default-features = false }
sc-rpc-api = { version = "0.43.0", default-features = false }
# need PATCH!
sc-informant = { version = "0.43.0", default-features = false }
sc-rpc-server = { version = "16.0.2", package = "sc-rpc-server", default-features = false }
sc-service = { version = "0.45.0", default-features = false }
sc-statement-store = { version = "19.0.0", default-features = false }
sc-telemetry = { version = "24.0.0", default-features = false }
sc-transaction-pool = { version = "37.0.0", default-features = false }
sc-transaction-pool-api = { version = "37.0.0", default-features = false }

sp-api = { version = "34.0.0", default-features = false }
sp-block-builder = { version = "34.0.0", default-features = false }
sp-blockchain = { version = "37.0.1", default-features = false }
sp-consensus-aura = { version = "0.40.0", default-features = false }
sp-consensus-grandpa = { version = "21.0.0", default-features = false }
sp-core = { version = "34.0.0", default-features = false }
sp-genesis-builder = { version = "0.15.0", default-features = false }
sp-inherents = { version = "34.0.0", default-features = false }
sp-io = { version = "38.0.0", default-features = false }
sp-keyring = { version = "39.0.0", default-features = false }
sp-offchain = { version = "34.0.0", default-features = false }
sp-runtime = { version = "39.0.0", default-features = false }
sp-session = { version = "35.0.0", default-features = false }
sp-statement-store = { version = "18.0.0", default-features = false }
sp-storage = { version = "21.0.0", default-features = false }
sp-timestamp = { version = "34.0.0", default-features = false }
sp-transaction-pool = { version = "34.0.0", default-features = false }
sp-version = { version = "37.0.0", default-features = false }

frame-benchmarking = { version = "37.0.0", default-features = false }
frame-benchmarking-cli = { version = "42.0.0", default-features = false }
frame-executive = { version = "37.0.0", default-features = false }
frame-metadata-hash-extension = { version = "0.5.0", default-features = false }
frame-support = { version = "37.0.0", default-features = false }
frame-system = { version = "37.1.0", default-features = false }
frame-system-benchmarking = { version = "37.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "34.0.0", default-features = false }
frame-try-runtime = { version = "0.43.0", default-features = false }

pallet-aura = { version = "36.0.0", default-features = false }
pallet-balances = { version = "38.0.0", default-features = false }
pallet-grandpa = { version = "37.0.0", default-features = false }
pallet-statement = { version = "19.0.0", default-features = false }
pallet-sudo = { version = "37.0.0", default-features = false }
pallet-timestamp = { version = "36.0.1", default-features = false }
pallet-transaction-payment = { version = "37.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "40.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "37.0.0", default-features = false }

substrate-build-script-utils = { version = "11.0.0", default-features = false }
substrate-frame-rpc-system = { version = "38.0.0", default-features = false }
substrate-wasm-builder = { version = "24.0.0", default-features = false }
