[package]
name = "pixel-runtime"
authors = [ "Pixel Developer" ]
description = "A FRAME-based Substrate Runtime, that demonstrates the Nimbus consensus framework."
edition = "2021"
version = "0.9.38"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [ "derive" ] }
log = { version = "0.4.14", default-features = false }
scale-info = { version = "2.3.1", default-features = false, features = [ "derive" ] }
serde =    { version = "1.0.119", optional = true, features = [ "derive" ] }
smallvec = "1.6.1"
num_enum = { version = "0.5.3", default-features = false }

# Diora Dependencies
pallet-parachain-staking = { path = "../pallets/parachain-staking", default-features = false }
pallet-dapps-staking = { path = "../pallets/dapps-staking", default-features = false }
pallet-block-reward = { path = "../pallets/block-reward", default-features = false }
precompile-utils = { path = "../precompiles/utils", default-features = false }
# Substrate Dependencies
## Substrate Primitive Dependencies
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }

## Substrate FRAME Dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", optional = true, default-features = false }
frame-executive = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", optional = true, default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }

## Substrate Pallet Dependencies
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
pallet-scheduler = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }

# Cumulus dependencies
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.38", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.38", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.38", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.38", default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.38", default-features = false }
cumulus-primitives-timestamp = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.38", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.38", default-features = false }
pallet-collator-selection = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.38", default-features = false }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.38", default-features = false }

# Nimbus Dependencies
nimbus-primitives = { git = "https://github.com/Diora-Network/nimbus", branch = "polkadot-v0.9.38", default-features = false }
pallet-author-inherent = { git = "https://github.com/Diora-Network/nimbus", branch = "polkadot-v0.9.38", default-features = false }
pallet-author-slot-filter = { git = "https://github.com/Diora-Network/nimbus", branch = "polkadot-v0.9.38", default-features = false }
pallet-author-mapping = { path = "../pallets/author-mapping", default-features = false }
pallet-ethereum-chain-id = { path = "../pallets/ethereum-chain-id", default-features = false }
session-keys-primitives = { path = "../primitives/session-keys", default-features = false }
core-primitives = { path = "../primitives/core", default-features = false }

# Frontier Dependencies
fp-rpc = { git = "https://github.com/Diora-Network/frontier", branch = "polkadot-v0.9.38", default-features = false }
fp-self-contained = { git = "https://github.com/Diora-Network/frontier", branch = "polkadot-v0.9.38", default-features = false }
pallet-base-fee = { git = "https://github.com/Diora-Network/frontier", branch = "polkadot-v0.9.38", default-features = false }
pallet-ethereum = { git = "https://github.com/Diora-Network/frontier", branch = "polkadot-v0.9.38", default-features = false }
pallet-evm = { git = "https://github.com/Diora-Network/frontier", branch = "polkadot-v0.9.38", default-features = false }
pallet-evm-precompile-blake2 = { git = "https://github.com/Diora-Network/frontier", branch = "polkadot-v0.9.38", default-features = false }
pallet-evm-precompile-bn128 = { git = "https://github.com/Diora-Network/frontier", branch = "polkadot-v0.9.38", default-features = false }
pallet-evm-precompile-dispatch = { git = "https://github.com/Diora-Network/frontier", branch = "polkadot-v0.9.38", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/Diora-Network/frontier", branch = "polkadot-v0.9.38", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/Diora-Network/frontier", branch = "polkadot-v0.9.38", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/Diora-Network/frontier", branch = "polkadot-v0.9.38", default-features = false }
pallet-evm-precompile-parachain-staking = { path = "../precompiles/parachain-staking", default-features = false }
pallet-evm-precompile-dapps-staking = { path = "../precompiles/dapps-staking", default-features = false }

# Polkadot Dependencies
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.38", default-features = false }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.38", default-features = false }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.38", default-features = false }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.38", default-features = false }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.38", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.38", default-features = false }

# Governance
pallet-collective = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
pallet-democracy = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
pallet-treasury = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.38", default-features = false }
pallet-preimage = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.38", default-features = false }
pallet-identity = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.38", default-features = false }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }

[features]
default = [
	"std",
]
std = [
	"codec/std",
	"num_enum/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"nimbus-primitives/std",
	"pallet-author-inherent/std",
	"pallet-author-slot-filter/std",
	"pallet-parachain-staking/std",
	"pallet-dapps-staking/std",
	"pallet-balances/std",
	"pallet-collator-selection/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-scheduler/std",
	"pallet-preimage/std",
	"pallet-identity/std",
	"pallet-utility/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"parachain-info/std",
	"polkadot-parachain/std",
	"polkadot-runtime-common/std",
	"scale-info/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
	"pallet-evm/std",
	"pallet-ethereum/std",
	"pallet-ethereum-chain-id/std",
	"pallet-base-fee/std",
	"pallet-evm-precompile-simple/std",
	"pallet-evm-precompile-sha3fips/std",
	"pallet-evm-precompile-parachain-staking/std",
	"pallet-evm-precompile-dapps-staking/std",
	"precompile-utils/std",
	"fp-rpc/std",
	"pallet-collective/std",
	"pallet-democracy/std",
	"pallet-treasury/std",
	"session-keys-primitives/std",
	"core-primitives/std",
	"pallet-author-mapping/std",
]

runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collator-selection/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
]

try-runtime = [
	"frame-support/try-runtime",
	"pallet-author-slot-filter/try-runtime",
]
