[package]
name = "dephy-pproxy"
version = "0.3.1"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
clap = "4.5.4"
futures = "0.3.30"
hex = "0.4.3"
libp2p = { version = "0.53.2", features = ["tokio", "macros", "yamux", "noise", "tcp", "request-response", "relay", "secp256k1"] }
prost = "0.13.1"
reqwest = { version = "0.12.5", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.207", features = ["derive"] }
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
tokio-util = "0.7.11"
tonic = "0.12.1"
tonic-web = "0.12.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.12.1"

[[bin]]
name = "pproxy"
path = "src/main.rs"

[dev-dependencies]
futures_ringbuf = "0.4.0"
