# Recommended method in https://matklad.github.io/2021/08/22/large-rust-workspaces.html
[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Tancrède Lepoint"]
documentation = "https://fhe.rs"
edition = "2021"
repository = "https://github.com/tlepoint/fhe.rs"
version = "0.1.0-beta.8"
license = "MIT"
rust-version = "1.73"

[workspace.dependencies]
clap = { version = "^4.5.4", default-features = false, features = ["derive"] }
concrete-ntt = { version = "^0.1.2", default-features = false }
console = { version = "^0.15.8", default-features = false }
criterion = { version = "^0.5.1", default-features = false }
doc-comment = { version = "^0.3.3", default-features = false }
env_logger = { version = "^0.11.3", default-features = false }
ethnum = { version = "^1.5.0", default-features = false }
fastdiv = { version = "^0.1.0", default-features = false }
indicatif = { version = "^0.17.8", default-features = false }
itertools = { version = "^0.12.1", default-features = false, features = ["use_alloc"] }
log = { version = "^0.4.21", default-features = false }
ndarray = { version = "^0.15.6", default-features = false }
num-bigint = { version = "^0.4.4", default-features = false }
num-bigint-dig = { version = "^0.8.4", default-features = false }
num-traits = { version = "^0.2.18", default-features = false }
proptest = { version = "^1.4.0" }
prost = { version = "^0.12.4", default-features = false, features = ["prost-derive"] }
prost-build = { version = "^0.12.3", default-features = false }
rand = { version = "^0.8.5", features = ["small_rng"], default-features = false }
rand_chacha = { version = "^0.3.1", default-features = false }
sha2 = { version = "^0.10.8", default-features = false }
thiserror-no-std = { version = "^2.0.0", default-features = false }
hashbrown = { version = "0.14" }
zeroize = { version = "^1.8.0", features = ["alloc"] }
zeroize_derive = { version = "^1.4.2" }
pulp = {version = "^0.18.9", default-features = false}
